# 07_Jeremy

./: .gitignore  Dockerfile  README.md  docker-compose-mysql.yml  docker-compose-nba-sql.yml  main.py  nba_player_state.py  nba_players_salary.py  nba_players_state.py  nba_teams_advancedstate.py  nba_teams_salary.py  nba_teams_state.py  pyproject.toml  teams_advanced_stats.py  teams_total_state.py
airflow/: .env
airflow/dags/: hahow_crawler_dag.py
data_ingestion/: config.py  mysql.py  nba_platers_table.py  nba_players_merge.py  nba_players_merge_tosql.py  nba_players_salary.py  nba_players_salary_tosql.py  nba_players_state.py  nba_players_state_tosql.py  nba_teams_advancedstate.py  nba_teams_advancedstate_tosql.py  nba_teams_merge.py  nba_teams_merge_tosql.py  nba_teams_salary.py  nba_teams_salary_tosql.py  nba_teams_state.py  nba_teams_state_tosql.py  producer.py  producer_NBA2015-2025.py  tasks.py  tasks_nba_player_state.py  tasks_nba_players_salary.py  tasks_nba_players_state.py  tasks_nba_teams_advancedstate.py  tasks_nba_teams_salary.py  tasks_nba_teams_state.py  tasks_teams_advanced_stats.py  tasks_teams_salary.py  tasks_teams_total_state.py  worker.py
nba-airflow/: Dockerfile  airflow.cfg  docker-compose-nba-airflow.yml
nba-airflow/dags/: example_test_dag.py  hahow_crawler_producer_dag.py
