[project]
name = "07-jeremy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery==5.3.6",
    "ipykernel>=6.30.1",
    "lxml>=6.0.1",
    "pandas>=2.2.3",
    "pymysql>=1.1.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_ingestion"]
